--- a/listadecompras.html
+++ b/listadecompras.html
@@ -18,7 +18,7 @@
     <table id="tabelaProduto" style="border: solid 1px">
         <tr>
             <th>Produto comprado - </th>
-            <th>Quantidae comprada</th>
+            <th>Quantidade comprada</th>
         </tr>
     </table>
 
